# data-bolt

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  dot_env.example  justfile  langgraph.json  pyproject.toml  pyrightconfig.json  template.yaml
.claude/skills/zai-cli/: .openskills.json
docs/: ANALYST_AGENT_SERVICE_REFACTOR_PLAN.md  LANGGRAPH_BIGQUERY_BOT_SPEC.md  RUNTIME_EXECUTION_STRUCTURE.md  SLACK_GUIDE.md  bigquery_agent_graph.dot  bigquery_agent_graph.mmd  bigquery_agent_graph_current.dot  bigquery_agent_graph_v2.dot  bigquery_agent_graph_v2.mmd  bigquery_full_graph.dot  bigquery_sql_workflow_graph.dot
scripts/: build_image.sh  create_roles.sh  deploy_stack.sh  deployed_version.sh  get_stack_output.sh  invoke_job.sh  sync_env.py  sync_secrets_to_ssm.sh
src/data_bolt/: app.py  bigquery_sql.py
src/data_bolt/botctl/: __init__.py  chat.py  env.py  main.py  runtime.py  simulate.py  types.py
src/data_bolt/slack/: __init__.py  app.py  background.py  handlers.py
src/data_bolt/tasks/: __init__.py  bigquery_agent.py  bigquery_sql.py  relevance.py
src/data_bolt/tasks/analyst_agent/: __init__.py  approval_store.py  deps.py  model_factory.py  models.py  semantic_compaction.py  service.py  thread_memory_store.py  tools.py
src/data_bolt/tasks/analyst_agent/runtime/: __init__.py  approval_flow.py  config.py  output_parsing.py  recovery.py  result_contract.py  thread_context.py
src/data_bolt/tasks/bigquery/: __init__.py  execution.py  llm_client.py  llm_config.py  parser.py  prompting.py  rag.py  service.py  tools.py  types.py  workflow_graph.py
src/data_bolt/tasks/bigquery_agent/: __init__.py  checkpoint.py  graph.py  langgraph_entrypoints.py  loop_runtime.py  nodes.py  service.py  types.py
src/data_bolt/tasks/tools/: __init__.py  bigquery_query.py  rag_lookup.py
tests/: test_app.py  test_background.py  test_bigquery_agent.py  test_bigquery_sql.py  test_bigquery_tools.py  test_botctl_chat.py  test_botctl_chat_e2e.py  test_botctl_entrypoint.py  test_botctl_env.py  test_botctl_simulate.py  test_handlers.py
tests/fixtures/: botctl_cases.json
tests/tasks/: test_analyst_agent_approval_store.py  test_analyst_agent_model_factory.py  test_analyst_agent_service.py  test_analyst_agent_tools.py  test_semantic_compaction.py  test_thread_memory_store.py
