[project]
name = "data_bolt"
version = "0.1.0"
description = "A Slack bot on AWS Lambda with Litestar"
authors = [{ name = "june" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "litestar[standard]~=2.8",
  "uvicorn[standard]~=0.30",
  "orjson~=3.10",
  "boto3>=1.34.0",
  "anyio>=4.0.0",
  "slack-bolt>=1.18.0",
  "slack-sdk>=3.27.0",
  "aiohttp>=3.9.0",
  "httpx>=0.27.0",
  "langgraph>=1.0.7",
  "langgraph-checkpoint-postgres>=3.0.4",
  "langgraph-checkpoint-aws>=1.0.4",
  "psycopg[binary]>=3.3.2",
  "google-cloud-bigquery>=3.31.0",
  "typer>=0.12,<1.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
botctl = "data_bolt.botctl.main:app"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "data_bolt"
module-root = "src"

[dependency-groups]
dev = [
    "boto3-stubs[essential,lambda,ssm]",
    "mypy>=1.19.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "-v",
    "--tb=short"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
extend-select = ["B", "I", "RUF", "UP"]
ignore = ["E203"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
files = ["src"]
